Google auth setup

--- a/NutriThink/NutriThink/NutriThink.iOS/NutriThink.iOS.csproj
+++ b/NutriThink/NutriThink/NutriThink.iOS/NutriThink.iOS.csproj
@@ -69,6 +69,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GoogleServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -144,5 +145,8 @@
       <Project>{7037B8BB-6E71-479B-BBA2-898D382AD05B}</Project>
       <Name>NutriThink</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
